# LLMscience

./: Baseline.ipynb  README.md  pyproject.toml
dataset/: tot_valid.csv  valid.csv
llm/: finetune.py
llm/configs/: config_orca_mini_v3_7b.yaml
llm/shell/: train.sh
llm/shell/wandb/: latest-run
llm/shell/wandb/run-20230906_165839-cjs7f2mt/: run-cjs7f2mt.wandb
llm/shell/wandb/run-20230906_170244-6jdfzd9h/: run-6jdfzd9h.wandb
llm/shell/wandb/run-20230906_181634-6rhbuf9x/: run-6rhbuf9x.wandb
llm/shell/wandb/run-20230907_123736-monu3bt2/: run-monu3bt2.wandb
llm/shell/wandb/run-20230907_124533-ett5y1fc/: run-ett5y1fc.wandb
llm/shell/wandb/run-20230907_125028-lbdbrs98/: run-lbdbrs98.wandb
llm/wandb/: latest-run
llm/wandb/run-20230906_163307-zgfwyoy5/: run-zgfwyoy5.wandb
llm/wandb/run-20230906_163542-g54b061g/: run-g54b061g.wandb
llm/wandb/run-20230906_164050-lsl59rt7/: run-lsl59rt7.wandb
llm/wandb/run-20230906_164254-e50zazyj/: run-e50zazyj.wandb
openbook/: data.sh  datachunk.py  dataset.py  faiss.sh  preprocess.py
openbook/conifgs/: faiss.yaml
plm/: dataset.py  model.py  train.py  train.sh
plm/configs/: config.yaml
plm/multiclass/: README.md  dataset.py  train.py
plm/multiclass/configs/: config.yaml
plm/multilabel/: dataset.py  evaluate.py  model.py  train.py  utils.py
plm/multilabel/configs/: config.yaml
stem_openbook/: Data.ipynb  data.sh  dataset.py  postprocess.py  preprocess.py  train.py  train_edit_preprocess.py  train_longformer.py
stem_openbook/configs/: bge-base.yaml  gen-bge-dataset.yaml
(+41 files in other folders)
